--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
 
+  device_info_plus: ^10.1.0
   cupertino_icons: ^1.0.8
   lucide_icons: ^0.257.0
   # এটি Skeleton Effect এর জন্য
